Fix compatibility with ModLauncher 1.1 (#57)